Update package config file

--- a/projects/ngx-mat-combobox/package.json
+++ b/projects/ngx-mat-combobox/package.json
@@ -1,9 +1,13 @@
 {
   "name": "ngx-mat-combobox",
   "version": "0.9.0",
+  "license": "MIT",
+  "homepage": "https://github.com/w3soto/ngx-mat-combobox#readme",
+  "keywords": ["angular", "material", "combobox", "combo", "select", "autocomplete", "typeahead"],
   "peerDependencies": {
-    "@angular/common": "^13.1.0",
-    "@angular/core": "^13.1.0"
+    "@angular/common": ">=10.0.0",
+    "@angular/core": ">=10.0.0",
+    "@angular/material": ">=10.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
